added scan of methods